--- a/BasicAI/BasicAI/BasicAI.vcxproj
+++ b/BasicAI/BasicAI/BasicAI.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="TileSet.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Vector.cpp" />
+    <ClCompile Include="Wall.cpp" />
     <ClCompile Include="WallHit.cpp" />
     <ClCompile Include="WaveB.cpp" />
     <ClCompile Include="WaveG.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Vector.h" />
+    <ClInclude Include="Wall.h" />
     <ClInclude Include="WallHit.h" />
     <ClInclude Include="WaveB.h" />
     <ClInclude Include="WaveG.h" />
