teste passar nivel

--- a/BasicAI/BasicAI/BasicAI.vcxproj
+++ b/BasicAI/BasicAI/BasicAI.vcxproj
@@ -162,13 +162,17 @@
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Delay.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Etther.cpp" />
     <ClCompile Include="Explosion.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="BasicAI.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Green.cpp" />
+    <ClCompile Include="Home.cpp" />
+    <ClCompile Include="Home.h" />
     <ClCompile Include="Hud.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="Magenta.cpp" />
@@ -193,6 +197,7 @@
     <ClCompile Include="WaveG.cpp" />
     <ClCompile Include="WaveM.cpp" />
     <ClCompile Include="WaveO.cpp" />
+    <ClCompile Include="Win.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +208,7 @@
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Delay.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Etther.h" />
     <ClInclude Include="Explosion.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
@@ -236,6 +242,8 @@
     <ClInclude Include="WaveG.h" />
     <ClInclude Include="WaveM.h" />
     <ClInclude Include="WaveO.h" />
+    <ClInclude Include="GameOver.h" />
+    <ClInclude Include="Win.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
